# PMPP_Exercises

./: README.md
Chapter02_VectorAdd/: CMakeLists.txt  main.cu  vecAdd.h
Chapter02_VectorAdd/reports/: full_profile_report.ncu-rep  full_report2.ncu-rep  my_report.nsys-rep
